# GPGMM

./: .gclient_previous_sync_commits  .gitignore  .gn  BUILD.gn  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPS  Doxyfile  README.chromium  README.md  TODO.md  _allocator_8h.html  _allocator_node_8cpp.html  _allocator_node_8h.html  _assert_8cpp.html  _assert_8h.html  _backend_8h.html  _backend_d3_d12_8h.html  _backend_vk_8h.html  _block_allocator_8h.html  _buddy_block_allocator_8cpp.html  _buddy_block_allocator_8h.html  _buddy_block_allocator_tests_8cpp.html  _buddy_memory_allocator_8cpp.html  _buddy_memory_allocator_8h.html  _buddy_memory_allocator_tests_8cpp.html  _buffer_allocator_d3_d12_8cpp.html  _buffer_allocator_d3_d12_8h.html  _caps_d3_d12_8cpp.html  _caps_d3_d12_8h.html  _caps_vk_8cpp.html  _caps_vk_8h.html  _capture_replay_tests_main_8cpp.html  _compiler_8h.html  _conditional_memory_allocator_8cpp.html  _conditional_memory_allocator_8h.html  _conditional_memory_allocator_tests_8cpp.html  _d3_d12_event_trace_replay_8cpp.html  _d3_d12_fuzzer_8cpp.html  (+671 more)
build_overrides/: dawn.gni  gpgmm.gni  gpgmm_features.gni  gpgmm_overrides_with_defaults.gni  spirv_tools.gni  swiftshader.gni  tint.gni  vulkan_common.gni  vulkan_headers.gni  vulkan_loader.gni  vulkan_tools.gni  vulkan_validation_layers.gni  wayland.gni  webnn.gni
examples/D3D12ProjectTemplate/: CMakeLists.txt  main.cpp
src/: .gitattributes  Allocator.h  BUILD.gn  BlockAllocator.h  BuddyAllocator.cpp  BuddyAllocator.h  BuddyBlockAllocator.cpp  BuddyBlockAllocator.h  BuddyMemoryAllocator.cpp  BuddyMemoryAllocator.h  CMakeLists.txt  CombinedMemoryAllocator.cpp  CombinedMemoryAllocator.h  ConditionalMemoryAllocator.cpp  ConditionalMemoryAllocator.h  IndexedMemoryPool.cpp  IndexedMemoryPool.h  JSONSerializer.cpp  JSONSerializer.h  LIFOMemoryPool.cpp  LIFOMemoryPool.h  LIFOPooledMemoryAllocator.cpp  LIFOPooledMemoryAllocator.h  LinearMemoryPool.cpp  LinearMemoryPool.h  Memory.cpp  Memory.h  MemoryAllocation.cpp  MemoryAllocation.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryAllocatorStack.cpp  MemoryAllocatorStack.h  MemoryPool.cpp  MemoryPool.h  ObjectSerializer.cpp  ObjectSerializer.h  PooledMemoryAllocator.cpp  PooledMemoryAllocator.h  PooledResourceMemoryAllocator.cpp  (+16 more)
src/common/: Assert.cpp  Assert.h  BUILD.gn  CMakeLists.txt  Compiler.h  Flags.h  IntegerTypes.h  Limits.h  LinkedList.h  Log.cpp  Log.h  Math.cpp  Math.h  NonCopyable.h  Platform.h  PlatformTime.h  RefCount.cpp  RefCount.h  SystemUtils.cpp  SystemUtils.h  WindowsTime.cpp
src/d3d12/: BufferAllocatorD3D12.cpp  BufferAllocatorD3D12.h  DefaultsD3D12.h  FenceD3D12.cpp  FenceD3D12.h  HeapAllocatorD3D12.cpp  HeapAllocatorD3D12.h  HeapD3D12.cpp  HeapD3D12.h  IUnknownImplD3D12.cpp  IUnknownImplD3D12.h  JSONSerializerD3D12.cpp  JSONSerializerD3D12.h  LimitsD3D12.h  ResidencyCacheD3D12.cpp  ResidencyCacheD3D12.h  ResidencyManagerD3D12.cpp  ResidencyManagerD3D12.h  ResidencySetD3D12.cpp  ResidencySetD3D12.h  ResourceAllocationD3D12.cpp  ResourceAllocationD3D12.h  ResourceAllocatorD3D12.cpp  ResourceAllocatorD3D12.h  ResourceHeapAllocatorD3D12.cpp  ResourceHeapAllocatorD3D12.h  UnknownD3D12.cpp  UnknownD3D12.h  UtilsD3D12.cpp  UtilsD3D12.h  d3d12_platform.h
src/fuzzers/: BUILD.gn  D3D12Fuzzer.cpp  D3D12Fuzzer.h  D3D12ResidencyManagerFuzzer.cpp  D3D12ResourceAllocatorFuzzer.cpp
src/gpgmm/: Allocator.h  AllocatorNode.cpp  AllocatorNode.h  BUILD.gn  Backend.h  BlockAllocator.h  BuddyBlockAllocator.cpp  BuddyBlockAllocator.h  BuddyMemoryAllocator.cpp  BuddyMemoryAllocator.h  CMakeLists.txt  CombinedMemoryAllocator.cpp  CombinedMemoryAllocator.h  ConditionalMemoryAllocator.cpp  ConditionalMemoryAllocator.h  Debug.cpp  Debug.h  Defaults.h  Error.h  EventTraceWriter.cpp  EventTraceWriter.h  FileEventTrace.cpp  FileEventTrace.h  GPUInfo.h  GraphNode.cpp  GraphNode.h  IndexedMemoryPool.cpp  IndexedMemoryPool.h  JSONSerializer.cpp  JSONSerializer.h  LIFOMemoryPool.cpp  LIFOMemoryPool.h  Memory.cpp  Memory.h  MemoryAllocation.cpp  MemoryAllocation.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryCache.h  MemoryPool.cpp  (+20 more)
src/gpgmm/common/: Allocator.h  AllocatorNode.cpp  AllocatorNode.h  Assert.h  BUILD.gn  Backend.h  BlockAllocator.h  BuddyBlockAllocator.cpp  BuddyBlockAllocator.h  BuddyMemoryAllocator.cpp  BuddyMemoryAllocator.h  CMakeLists.txt  Compiler.h  ConditionalMemoryAllocator.cpp  ConditionalMemoryAllocator.h  Debug.cpp  Debug.h  DedicatedMemoryAllocator.cpp  DedicatedMemoryAllocator.h  Defaults.h  Error.cpp  Error.h  EventMessage.cpp  EventMessage.h  EventTraceWriter.cpp  EventTraceWriter.h  Flags.h  GPUInfo.h  IndexedMemoryPool.cpp  IndexedMemoryPool.h  JSONEncoder.cpp  JSONEncoder.h  JSONSerializer.cpp  JSONSerializer.h  LIFOMemoryPool.cpp  LIFOMemoryPool.h  Limits.h  LinkedList.h  Log.cpp  Log.h  (+53 more)
src/gpgmm/d3d12/: BackendD3D12.h  BudgetUpdateD3D12.cpp  BudgetUpdateD3D12.h  BudgetUpdateDXGI.cpp  BudgetUpdateDXGI.h  BufferAllocatorD3D12.cpp  BufferAllocatorD3D12.h  CapsD3D12.cpp  CapsD3D12.h  D3D12Platform.h  DebugD3D12.h  DebugObjectD3D12.cpp  DebugObjectD3D12.h  DebugResourceAllocatorD3D12.cpp  DebugResourceAllocatorD3D12.h  DefaultsD3D12.h  ErrorD3D12.cpp  ErrorD3D12.h  EventMessageD3D12.h  EventRecordD3D12.h  FenceD3D12.cpp  FenceD3D12.h  HeapD3D12.cpp  HeapD3D12.h  IUnknownImplD3D12.cpp  IUnknownImplD3D12.h  JSONSerializerD3D12.cpp  JSONSerializerD3D12.h  LogD3D12.h  ResidencyHeapD3D12.cpp  ResidencyHeapD3D12.h  ResidencyListD3D12.cpp  ResidencyListD3D12.h  ResidencyManagerD3D12.cpp  ResidencyManagerD3D12.h  ResidencyManagerDXGI.cpp  ResidencyManagerDXGI.h  ResidencySetD3D12.cpp  (+17 more)
src/include/: gpgmm.h  gpgmm_d3d12.h  gpgmm_export.h  gpgmm_vk.h
src/mvi/: gpgmm.cpp  gpgmm.h  gpgmm_d3d12.cpp  gpgmm_d3d12.h  gpgmm_d3d12_mvi.cpp  gpgmm_d3d12_mvi.h  gpgmm_mvi.cpp  gpgmm_mvi.h
src/samples/: BUILD.gn  CMakeLists.txt  D3D12Sample.cpp
src/tests/: BUILD.gn  CMakeLists.txt  CaptureReplayTestsMain.cpp  D3D12Test.cpp  D3D12Test.h  DummyMemoryAllocator.h  End2EndTestsMain.cpp  GPGMMTest.cpp  GPGMMTest.h  UnittestsMain.cpp  VKTest.cpp  VKTest.h
(+309 files in other folders)
