# Copyright 2018 The Dawn Authors
# Copyright 2021 The GPGMM Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("build_overrides/gpgmm_features.gni")
import("build_overrides/gpgmm_overrides_with_defaults.gni")

group("all") {
  testonly = true

  deps = [ "src/tests:gpgmm_tests" ]

  if (gpgmm_enable_dawn) {
    deps += [ "//third_party/dawn/src/tests:dawn_end2end_tests" ]
  }

  if (gpgmm_enable_webnn) {
    deps += [ "//third_party/webnn_native/src/tests:webnn_end2end_tests" ]
  }
}

# This target is built when no specific target is specified on the command line.
group("default") {
  testonly = true
  deps = [ ":all" ]
}

# This target is built when under third_party.
group("gpgmm") {
  deps = [ "src/gpgmm:gpgmm" ]
}
