# Copyright 2022 The GPGMM Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# GPGMM doesn't have Chromium's //build directory. Tell Dawn to do without.
dawn_has_build = false

# The paths to Dawn's dependencies
dawn_abseil_dir = "//third_party/dawn/third_party/abseil-cpp"
dawn_jinja2_dir = "//third_party/dawn/third_party/jinja2"
dawn_glfw_dir = "//third_party/dawn/third_party/glfw"
dawn_glm_dir = "//third_party/dawn/third_party/glm"
dawn_googletest_dir = "//third_party/googletest"
dawn_spirv_tools_dir = "//third_party/vulkan-deps/spirv-tools/src"
dawn_spirv_cross_dir = "//third_party/vulkan-deps/spirv-cross/src"
dawn_swiftshader_dir = "//third_party/dawn/third_party/swiftshader"
dawn_tint_dir = "//third_party/dawn/third_party/tint"
dawn_vulkan_loader_dir = "//third_party/vulkan-deps/vulkan-loader/src"
dawn_vulkan_validation_layers_dir =
    "//third_party/vulkan-deps/vulkan-validation-layers/src"
dawn_gpgmm_dir = "//"
