# Copyright 2022 The GPGMM Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build_overrides/gpgmm.gni")

# Enable the compilation for UWP
gpgmm_is_winuwp = is_win && target_os == "winuwp"

if (!defined(gpgmm_standalone)) {
  gpgmm_standalone = false
}

if (!defined(gpgmm_root_dir)) {
  gpgmm_root_dir = get_path_info("..", "abspath")
}

if (!defined(gpgmm_googletest_dir)) {
  gpgmm_googletest_dir = "//third_party/googletest"
}

if (!defined(gpgmm_jsoncpp_dir)) {
  gpgmm_jsoncpp_dir = "//third_party/jsoncpp"
}

if (!defined(gpgmm_vk_deps_dir)) {
  gpgmm_vk_deps_dir = "//third_party/vulkan-deps"
  if (gpgmm_standalone) {
    gpgmm_vk_deps_dir = "${gpgmm_root_dir}/third_party/vulkan-deps"
  }
}

if (!defined(gpgmm_vk_headers_dir)) {
  gpgmm_vk_headers_dir = "${gpgmm_vk_deps_dir}/vulkan-headers/src"
}

if (!defined(gpgmm_vk_loader_dir)) {
  gpgmm_vk_loader_dir = ""
  if (gpgmm_standalone) {
    gpgmm_vk_loader_dir = "${gpgmm_vk_deps_dir}/vulkan-loader/src"
  }
}

if (!defined(gpgmm_vk_tools_dir)) {
  gpgmm_vk_tools_dir = "${gpgmm_vk_deps_dir}/vulkan-tools/src"
}

if (!defined(gpgmm_vk_validation_layers_dir)) {
  gpgmm_vk_validation_layers_dir = ""
}

if (!defined(gpgmm_enable_d3d12)) {
  gpgmm_enable_d3d12 = is_win
}

if (!defined(gpgmm_enable_vk)) {
  gpgmm_enable_vk = is_linux || is_chromeos || (is_win && !gpgmm_is_winuwp) ||
                    is_fuchsia || is_android
}

# Use our built version of the Vulkan validation layers
if (!defined(gpgmm_enable_vk_validation_layers)) {
  gpgmm_enable_vk_validation_layers =
      gpgmm_enable_vk && ((is_linux && !is_chromeos) || is_win || is_mac)
}

# Use our built version of the Vulkan loader on platforms where we can't
# assume to have one present at the system level.
if (!defined(gpgmm_enable_vk_loader)) {
  gpgmm_enable_vk_loader =
      gpgmm_enable_vk && (is_mac || (is_linux && !is_android))
}
