# Copyright 2022 The GPGMM Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The paths to WebNN's dependencies
webnn_jinja2_dir = "//third_party/webnn_native/third_party/jinja2"

# TODO(webnn): WebNN hard codes //third_party/dawn paths within BUILD.gn
# files so we must use GPGMM-Dawn version instead of WebNN-Dawn version to
# workaround.
webnn_dawn_root = "//third_party/dawn"

webnn_gpgmm_dir = "//"
